@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: PTYTextView.m,v 1.19 2003-01-17 23:22:20 ujwal Exp $
+// $Id: PTYTextView.m,v 1.20 2003-02-03 07:44:52 ujwal Exp $
 //
 //  PTYTextView.m
 //  JTerminal
@@ -557,11 +557,22 @@
                 propertyList = [pb propertyListForType: NSFilenamesPboardType];
                 for(i = 0; i < [propertyList count]; i++)
                 {
-                    // Just paste the file names into the shell.
+                    // Just paste the file names into the shell after escaping special characters.
                     if ([delegate respondsToSelector:@selector(pasteString:)])
                     {
-                        [delegate pasteString: (NSString*)[propertyList objectAtIndex: i]];
+			NSMutableString *aMutableString;
+
+			aMutableString = [[NSMutableString alloc] initWithString: (NSString*)[propertyList objectAtIndex: i]];
+			// get rid of special characters
+			[aMutableString replaceOccurrencesOfString: @" " withString: @"\\ " options: 0 range: NSMakeRange(0, [aMutableString length])];
+			[aMutableString replaceOccurrencesOfString: @"(" withString: @"\\(" options: 0 range: NSMakeRange(0, [aMutableString length])];
+			[aMutableString replaceOccurrencesOfString: @")" withString: @"\\)" options: 0 range: NSMakeRange(0, [aMutableString length])];
+			[aMutableString replaceOccurrencesOfString: @"\"" withString: @"\\\"" options: 0 range: NSMakeRange(0, [aMutableString length])];
+[aMutableString replaceOccurrencesOfString: @"'" withString: @"\\'" options: 0 range: NSMakeRange(0, [aMutableString length])];
+			
+                        [delegate pasteString: aMutableString];
                         [delegate pasteString: @" "];
+			[aMutableString release];
                     }
 
                 }
